// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LeadParagraph component Matches the snapshot 1`] = `
<DocumentFragment>
  <p
    class="ssb-lead-paragraph"
  >
    Leading paragraph
  </p>
</DocumentFragment>
`;

exports[`LeadParagraph component Toggles className correctly 1`] = `
<DocumentFragment>
  <p
    class="ssb-lead-paragraph negative"
  >
    Leading paragraph
  </p>
</DocumentFragment>
`;
